Use Java Modules